--- a/package.json
+++ b/package.json
@@ -2,29 +2,12 @@
   "name": "pinion-logger",
   "version": "1.0.0",
   "description": "Clandestinely log various messages in a pubsub room",
-  "bin": {
-    "pinion": "bin/index.js"
-  },
-  "files": [
-    "lib",
-    "bin",
-    "scripts",
-    "README.md",
-    "LICENSE",
-    "CODE_OF_CONDUCT.md"
-  ],
-  "main": "src/index.ts",
   "scripts": {
     "build": "tsc -p tsconfig.prod.json",
     "lint": "tsc --noEmit && eslint --fix --ext ts src types",
     "start": "yarn build && DEBUG=pinion-monitor:* bin/index.js",
-    "start:prod": "yarn build && NETWORK_ID=1 NODE_ENV=production DEBUG=pinion-monitor:* bin/index.js"
+    "start:prod": "yarn build && NETWORK_ID=1 NODE_ENV=production DEBUG=pinion-logger:* bin/index.js"
   },
-  "keywords": [
-    "ipfs",
-    "orbit-db",
-    "pinning"
-  ],
   "author": "Christian Maniewski <chris@colony.io>",
   "contributors": [
     "Raul Glogovetan <raul@glogovetan.com>"
@@ -37,7 +20,6 @@
     "@types/sinon": "7.0.13",
     "@typescript-eslint/eslint-plugin": "1.10.2",
     "@typescript-eslint/parser": "1.10.2",
-    "ava": "2.1.0",
     "eslint": "5.16.0",
     "eslint-config-prettier": "5.0.0",
     "eslint-plugin-prettier": "3.1.0",
@@ -55,6 +37,7 @@
     "@colony/colony-js-client": "^1.13.1",
     "debug": "^4.1.0",
     "dotenv": "^8.0.0",
+    "fs-extra": "^8.1.0",
     "ipfs": "^0.36.4",
     "ipfs-pubsub-peer-monitor": "^0.0.8",
     "is-ipfs": "^0.6.0",
@@ -63,17 +46,5 @@
   },
   "resolutions": {
     "leveldown": "5.1.0"
-  },
-  "ava": {
-    "files": [
-      "src/__tests__/*.test.ts"
-    ],
-    "compileEnhancements": false,
-    "extensions": [
-      "ts"
-    ],
-    "require": [
-      "ts-node/register"
-    ]
   }
 }
